# File-System

./: CMakeLists.txt  README.md  presentation.pptx
header/: Directory.h  FileDescriptor.h  FileSystemObject.h
include/: File.h  FileSystemManager.h  FileSystemObject.h
source/: Directory.cpp  File.cpp  FileDescriptor.cpp  FileSystemManager.cpp  FileSystemObject.cpp  main.cpp
src/: Directory.cpp  File.cpp  FileDescriptor.cpp  FileSystemManager.cpp  FileSystemObject.cpp  main.cpp
tests/: filesystem_tests.cpp
